testsuite/tests/typecheck/should_fail/ContextStack2.stderr

ContextStack2.hs:8:6: error:
    • Reduction stack overflow; size = 11
      When simplifying the following type:
        TF (TF (TF (TF (TF a))))
        ~ (TF (TF (TF (TF (TF (TF a))))), TF (TF (TF (TF (TF (TF Int))))))
      Use -freduction-depth=0 to disable this check
      (any upper bound you could choose might fail unpredictably with
       minor updates to GHC, so disabling the check is recommended if
       you're sure that type checking should terminate)
    • In the ambiguity check for ‘t’
      In the type signature:
        t :: (a ~ TF (a, Int)) => Int
